--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "build": "webpack -d --mode development",
-    "watch ": "webpack -w -d --mode development",
+    "watch": "webpack --mode development --watch",
     "build-prod": "webpack -p --mode production"
   },
-  "dependencies": {},
+  "dependencies": {
+    "gsap": "^2.1.3",
+    "pixi.js": "^5.0.3"
+  },
   "devDependencies": {
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
