--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-prod": "webpack -p --mode production"
   },
   "dependencies": {
+    "@types/gsap": "^1.20.2",
     "gsap": "^2.1.3",
     "pixi.js": "^5.0.3"
   },
