--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "empty-project-typescript",
+  "name": "softgames-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "gsap": "^2.1.3",
+    "pixi-particles": "^4.1.0",
     "pixi.js": "^5.0.3"
   },
   "devDependencies": {
